--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -24,13 +24,13 @@
 
 - debug: var=ls_out.stdout_lines
 
-- name: build dependencies
+- name: build npm dependencies
   become: yes
   command: npm install
   args:
     chdir: /opt/udapeople/backend
 
-- name: build backend
+- name: build npm backend
   become: yes
   command: npm run build
   args:
