--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,7 +297,7 @@ jobs:
       # Here's where you will add some code to rollback on failure      
       - destroy-environment:
          id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migrations:
+      - revert-migrations:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
                     
   deploy-backend:
@@ -330,7 +330,7 @@ jobs:
       # Here's where you will add some code to rollback on failure  
       - destroy-environment:
          id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migrations:
+      - revert-migrations:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   smoke-test:
@@ -367,7 +367,7 @@ jobs:
       # Here's where you will add some code to rollback on failure  
       - destroy-environment:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert_migrations:
+      - revert-migrations:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   cloudfront-update:
@@ -386,7 +386,7 @@ jobs:
             # your code here
             exit 1
       # Here's where you will add some code to rollback on failure  
-      - revert_migrations:
+      - revert-migrations:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   cleanup:
