--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,7 +297,7 @@ jobs:
           name: Install utilities tar and gzip
           command: |
             yum install -y tar gzip 
-            yum install -y nodejs npm
+            yum install -y nodejs npm curl
       - restore_cache:
           keys: [frontend-dist]
       - run:
@@ -326,7 +326,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible tar gzip nodejs npm
+            apk add --update ansible tar gzip nodejs npm curl
             ansible --version
             pip install awscli
       - run:
@@ -392,7 +392,7 @@ jobs:
           name: Install dependencies
           command: |
             # your code here
-            exit 1
+            yum install -y nodejs npm curl
       - run:
           name: Update cloudfront distribution
           command: |
