--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -398,7 +398,7 @@ jobs:
           command: |
             # your code here
             aws cloudformation deploy \
-              --template-file ./.circleci/files/cloudfront.yaml \
+              --template-file ./.circleci/files/cloudfront.yml \
               --stack-name udapeople-vekb3zs6da2fbxtn \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
               --tags project=udapeople
