--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -415,17 +415,28 @@ jobs:
           name: Get old stack workflow id
           command: |
             # your code here
-            export OldWorkflowID="the id here"
-            export STACKS=[] #put the list of stacks here
+            export OldWorkflowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+            
+            echo "Old Workflow ID: ${OldWorkflowID}"
+            echo "STACKS: ${STACKS}"
       - run:
           name: Remove old stacks and files
           command: |
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
               # your code here
+              # remove stacks
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              # remove S3 bucket
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              # remove frontend stack
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             fi
             
-
 workflows:
   default:
     jobs:
@@ -460,5 +471,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-#      - cleanup:
-#          requires: [cloudfront-update]
+      - cleanup:
+          requires: [cloudfront-update]
