--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -401,7 +401,8 @@ jobs:
               --template-file ./.circleci/files/cloudfront.yml \
               --stack-name udapeople-vekb3zs6da2fbxtn \
               --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-              --tags project=udapeople
+              --tags project=udapeople \
+              --region=eu-central-1
       # Here's where you will add some code to rollback on failure  
       - revert-migrations:
           id: ${CIRCLE_WORKFLOW_ID:0:7}
