--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -416,9 +416,7 @@ jobs:
           name: Remove old stacks and files
           command: |
             # your code here
-            export OldWorkflowID=$(aws cloudformation \
-                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                --no-paginate --output text)
+            export OldWorkflowID=$(curl -H "token: ${MEMSTASH_TOKEN}" --request GET https://api.memstash.io/values/udapeople-workflow-id)
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                 --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
             
@@ -437,7 +435,8 @@ jobs:
               echo "remove stack: udapeople-frontend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
             fi
-            
+            # set current workflow id
+            curl -H "token: ${MEMSTASH_TOKEN}" --request PUT --data "${CIRCLE_WORKFLOW_ID:0:7}" https://api.memstash.io/values/udapeople-workflow-id
 workflows:
   default:
     jobs:
