--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -32,8 +32,7 @@
 
 - name: build npm backend
   become: yes
-  command: |
-    export API_URL=$(curl -H "token: ${MEMSTASH_TOKEN}" --request GET https://api.memstash.io/values/udapeople-backend-url) && npm run build
+  command: API_URL=$(curl -H "token: ${MEMSTASH_TOKEN}" --request GET https://api.memstash.io/values/udapeople-backend-url); npm run build
   args:
     chdir: /opt/udapeople/backend
 
