--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -29,13 +29,17 @@
   command: npm install
   args:
     chdir: /opt/udapeople/backend
+  environment:
+    API_URL: "{{ lookup('env', 'API_URL') }}"
 
 - name: build npm backend
   become: yes
   command: |
-    export API_URL=$(curl -H "token: ${MEMSTASH_TOKEN}" --request GET https://api.memstash.io/values/udapeople-backend-url) && npm run build
+    npm run build
   args:
     chdir: /opt/udapeople/backend
+  environment:
+    API_URL: "{{ lookup('env', 'API_URL') }}"
 
 - name: start PM2 service
   become: yes
@@ -53,3 +57,4 @@
     TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
     TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
     TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+    API_URL: "{{ lookup('env', 'API_URL') }}"
