--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -340,6 +340,8 @@ jobs:
             pwd
             ls -l
             cd .circleci/ansible
+            export API_URL=$(curl -H "token: ${MEMSTASH_TOKEN}" --request GET https://api.memstash.io/values/udapeople-backend-url)
+            echo "${API_URL}"
             ansible-playbook -v -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure  
       - destroy-environment:
