--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,7 @@ jobs:
           working_directory: ./backend
           command: |
             npm install
+            npm audit fix
             npm run build
       - save_cache:
           paths: [backend/node_modules]
